womtool/src/test/resources/validate/wdl_draft2/invalid/trailing_if/trailing_if.wdl
workflow trailing_if {

  Boolean is_exome

  if (is_exome != ) {
    Int is_exome_int = 1
  }
}
